# sc-script-gen

./: .gitignore  .pdm-python  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.md  Dockerfile  README.md  Untitled.ipynb  debug.py  pyproject.toml  ruff.toml  sc_script_gen.def
src/asapseq_script_gen/: CHANGELOG.md  __init__.py  create_count_scripts.py
src/sc_script_gen/: __init__.py  __main__.py  asapseq.py  scrnaseq.py  utils.py
