[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "sc_script_gen"
version = "2.6.0"
description = "Use information from a bcl-convert samplesheet to create scripts to process scrnaseq and asapseq data"
authors = [
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
dependencies = [
    "polars>=0.46.0",
    "typer>=0.15.1",
    "rich>=13.9.4",
    "loguru>=0.7.3",
]
requires-python = ">=3.10.14"
readme = "README.md"
license = {text = "GPL-3.0"}

[project.scripts]
asapseq = "sc_script_gen.asapseq:asapseq"
scrnaseq = "sc_script_gen.scrnaseq:scrnaseq"
script_gen = "sc_script_gen.__main__:script_gen"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
format = "ruff format src/"
lint = "ruff check --fix src/"
all = {composite = ["format", "lint"]}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
[dependency-groups]
dev = [
    "ruff>=0.9.4",
    "pip>=25.0",
    "pytest>=8.3.4",
    "nox>=2024.10.9",
    "coverage>=7.6.10",
    "pytest-random-order>=1.1.1",
    "pytest-xdist[psutil]>=3.6.1",
    "pre-commit>=4.1.0",
    "pytest-cov>=6.0.0",
]
