[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "sc_script_gen"
version = "2.7.1"
description = "Use information from a bcl-convert samplesheet to create scripts to process scrnaseq and asapseq data"
authors = [
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
dependencies = [
    "polars>=1.32.0",
    "typer>=0.16.0",
    "rich>=14.1.0",
    "loguru>=0.7.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL-3.0"}

[project.scripts]
asapseq = "sc_script_gen.asapseq:asapseq"
scrnaseq = "sc_script_gen.scrnaseq:scrnaseq"
script_gen = "sc_script_gen.__main__:script_gen"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
format = "ruff format src/"
lint = "ruff check --fix src/"
all = {composite = ["format", "lint"]}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
[dependency-groups]
dev = [
    "coverage>=7.10.3",
    "nox>=2025.5.1",
    "pip>=25.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-random-order>=1.2.0",
    "pytest-xdist[psutil]>=3.8.0",
    "ruff>=0.12.9",
    "ty>=0.0.1a18",
]
